ENH:  RF prediction.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,16 @@
 <h1>Age distribution (per Dx)</h1>
 <p><img src="Figures/initialDiagnosis.png" /></p>
 </section></section>
-<section><section id="classification-prediction" class="titleslide slide level1"><h1>Classification prediction</h1></section></section>
+<section><section id="cdrsb-prediction-w-random-forests" class="titleslide slide level1"><h1>CDRSB prediction w/ random forests</h1></section><section id="cross-sectional-importance-plot" class="slide level2">
+<h1>Cross sectional importance plot</h1>
+<p><img src="Figures/importanceCrossSectional.png" /></p>
+</section><section id="longitudinal-importance-plot" class="slide level2">
+<h1>Longitudinal importance plot</h1>
+<p><img src="Figures/importanceLongitudinal.png" /></p>
+</section><section id="rmse-differences" class="slide level2">
+<h1>RMSE differences</h1>
+<p><img src="Figures/xrfRmse.png" /></p>
+</section></section>
     </div>
   </div>
 
